--- a/Hello_World_STAN.ipynb
+++ b/Hello_World_STAN.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "63681a67-6044-4924-9fa6-bc4e8cf30318",
+   "id": "c426add8-9603-4687-b11f-d33cf1870278",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,10 +99,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building...\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32mBuilding:\u001b[0m found in cache, done.\n"
+      "\n",
+      "Building: found in cache, done."
      ]
     }
    ],
@@ -120,9 +128,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[36mSampling:\u001b[0m   0%\n",
-      "\u001b[1A\u001b[0J\u001b[32mSampling:\u001b[0m 100%, done.\n",
-      "\u001b[36mMessages received during sampling:\u001b[0m\n",
+      "Sampling:   0%\n",
+      "Sampling: 100%, done.\n",
+      "Messages received during sampling:\n",
       "  Gradient evaluation took 7.1e-05 seconds\n",
       "  1000 transitions using 10 leapfrog steps per transition would take 0.71 seconds.\n",
       "  Adjust your expectations accordingly!\n",
@@ -409,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "f3edb6f7-7603-4ba7-9af8-98883bbbf8fd",
    "metadata": {},
    "outputs": [
@@ -448,7 +456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "stan2",
    "language": "python",
    "name": "python3"
   },
