--- a/Lecture-3.Mixture_Models/Gaia.ipynb
+++ b/Lecture-3.Mixture_Models/Gaia.ipynb
@@ -773,7 +773,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "stan2",
    "language": "python",
    "name": "python3"
   },
