--- a/Lecture-2.Simple_Bayesian_examples/Parallel_sampling_within_chains.Bayesian_Anomaly_Detection.ipynb
+++ b/Lecture-2.Simple_Bayesian_examples/Parallel_sampling_within_chains.Bayesian_Anomaly_Detection.ipynb
@@ -2066,7 +2066,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "stan2",
    "language": "python",
    "name": "python3"
   },
