--- a/Lecture-1.Introduction_to_Bayesian_Techniques/gaussian_mixture.ipynb
+++ b/Lecture-1.Introduction_to_Bayesian_Techniques/gaussian_mixture.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,19 +239,18 @@
       "Sampling:   1% (103/8000)\n",
       "Sampling:   4% (302/8000)\n",
       "Sampling:   8% (602/8000)\n",
-      "Sampling:  10% (802/8000)\n",
-      "Sampling:  11% (901/8000)\n",
-      "Sampling:  14% (1100/8000)\n",
-      "Sampling:  20% (1600/8000)\n",
-      "Sampling:  26% (2100/8000)\n",
-      "Sampling:  50% (4000/8000)\n",
-      "Sampling:  72% (5800/8000)\n",
+      "Sampling:  11% (902/8000)\n",
+      "Sampling:  13% (1001/8000)\n",
+      "Sampling:  15% (1200/8000)\n",
+      "Sampling:  21% (1700/8000)\n",
+      "Sampling:  40% (3200/8000)\n",
+      "Sampling:  64% (5100/8000)\n",
       "Sampling:  86% (6900/8000)\n",
       "Sampling: 100% (8000/8000)\n",
       "Sampling: 100% (8000/8000), done.\n",
       "Messages received during sampling:\n",
-      "  Gradient evaluation took 7.6e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.76 seconds.\n",
+      "  Gradient evaluation took 0.000112 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 1.12 seconds.\n",
       "  Adjust your expectations accordingly!\n",
       "  Informational Message: The current Metropolis proposal is about to be rejected because of the following issue:\n",
       "  Exception: normal_lpdf: Location parameter is inf, but must be finite! (in '/tmp/httpstan_jrs7wdz7/model_kmu4duxc.stan', line 23, column 3 to line 25, column 58)\n",
@@ -273,14 +272,14 @@
       "  Exception: normal_lpdf: Location parameter is inf, but must be finite! (in '/tmp/httpstan_jrs7wdz7/model_kmu4duxc.stan', line 23, column 3 to line 25, column 58)\n",
       "  If this warning occurs sporadically, such as for highly constrained variable types like covariance matrices, then the sampler is fine,\n",
       "  but if this warning occurs often then your model may be either severely ill-conditioned or misspecified.\n",
-      "  Gradient evaluation took 7.1e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.71 seconds.\n",
+      "  Gradient evaluation took 8.2e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.82 seconds.\n",
       "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 7.2e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.72 seconds.\n",
+      "  Gradient evaluation took 7.7e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.77 seconds.\n",
       "  Adjust your expectations accordingly!\n",
-      "  Gradient evaluation took 7.4e-05 seconds\n",
-      "  1000 transitions using 10 leapfrog steps per transition would take 0.74 seconds.\n",
+      "  Gradient evaluation took 7.8e-05 seconds\n",
+      "  1000 transitions using 10 leapfrog steps per transition would take 0.78 seconds.\n",
       "  Adjust your expectations accordingly!\n"
      ]
     }
